# tictactoe_cpp

./: .gitignore  CMakeLists.txt  README.md  ai_player.cpp  board.cpp  board_tree.cpp  game.cpp  game_screen.cpp  game_screen.h  main.cpp  player.cpp  remote_player.cpp
include/: ai_player.h  board.h  board_tree.h  game.h  game_screen.h  placeholder.h  player.h  remote_game.h  remote_player.h
include/websocket/: WebsocketPlayer.h  blocking_queue.h  typedefs.h
resources/: help.txt  instruction.txt
src/: board.cpp  game.cpp  player.cpp
src/websocket/: WebsocketPlayer.cpp  websocket.cpp
test/: BoardTests.cpp  BoardTreeTests.cpp  CMakeLists.txt  PlayerTests.cpp  TestRemoteGame.cpp
